--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="py-5 flex justify-between text-white font-bold">
         <div class="flex w-full flex-wrap items-center justify-between px-3">
           <div class="mx-2">
-            <img src="icons/logo.png" alt="" class="w-72 sm:mx-10" />
+            <img src="icons/Logo.png" alt="" class="w-72 sm:mx-10" />
           </div>
           <!-- Hamburger button for mobile view -->
           <button
