--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Navbar Section -->
     <section>
-      <nav class="py-5 flex justify-between text-white font-bold">
+      <nav class="py-3 flex justify-between text-white font-bold bg-white">
         <div class="flex w-full flex-wrap items-center justify-between px-3">
           <div class="mx-2">
             <img src="icons/Logo.png" alt="" class="w-72 sm:mx-10" />
@@ -62,7 +62,7 @@
                 data-te-nav-item-ref
               >
                 <a
-                  class="text-neutral-300 transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
+                  class="text-black transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
                   aria-current="page"
                   href="#"
                   data-te-nav-link-ref
@@ -75,7 +75,7 @@
                 data-te-nav-item-ref
               >
                 <a
-                  class="p-0 text-neutral-300 transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
+                  class="p-0 text-black transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
                   href="#"
                   data-te-nav-link-ref
                   >Features</a
@@ -87,7 +87,7 @@
                 data-te-nav-item-ref
               >
                 <a
-                  class="p-0 text-neutral-300 transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
+                  class="p-0 text-black transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
                   href="#"
                   data-te-nav-link-ref
                   >Pricing</a
@@ -99,7 +99,7 @@
                 data-te-nav-item-ref
               >
                 <a
-                  class="p-0 text-neutral-300 transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
+                  class="p-0 text-black transition duration-200 hover:text-neutral-200 hover:ease-in-out focus:text-neutral-200 disabled:text-black/30 motion-reduce:transition-none lg:px-2 [&.active]:text-black/90 [&.active]:text-neutral-200"
                   href="#"
                   data-te-nav-link-ref
                   >About</a
