--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class"bg-indigo-950">
     <!-- Navbar Section -->
     <section>
       <nav class="py-3 flex justify-between text-white font-bold bg-white">
