--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-indigo-950">
+  <body class="bg-stone-900">
     <!-- Navbar Section -->
     <section>
       <nav class="py-3 flex justify-between text-white font-bold bg-white">
         <div class="flex w-full flex-wrap items-center justify-between px-3">
           <div class="mx-2">
-            <img src="icons/Logo.png" alt="" class="w-72 sm:mx-10" />
+            <a href=""><img src="icons/Logo.png" alt="" class="w-72 sm:mx-10" /></a>
           </div>
           <!-- Hamburger button for mobile view -->
           <button
@@ -188,20 +188,20 @@
           <h1 class="font-bold text-4xl">CASUAL SHOES</h1>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-3 sm:space-x-3 ml-8">
-          <div class="w-[85%] rounded overflow-hidden shadow-lg">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-zinc-900 rounded-2xl">
             <img
-              class="w-60 m-auto my-10"
+              class="w-60 m-auto my-10 bg-white rounded-2xl"
               src="images/image 5.png"
               alt="Sunset in the mountains"
             />
             <div class="px-6 py-4">
-              <div class="font-bold text-xl mb-2">Yellow Coat Jacket</div>
-              <p class="text-gray-700 text-base">
+              <div class="font-bold text-xl mb-2 text-orange-500">Nike Shoe</div>
+              <p class="text-gray-300 text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
                 <span class="flex justify-between">
-                  <h1 class="font-medium text-2xl my-2">$234</h1>
+                  <h1 class="font-medium text-2xl my-2 text-green-600">$234</h1>
                   <button
                     class="flex font-bold pr-4 pl-2 py-2 bg-green-500 text-white rounded-md"
                   >
@@ -212,20 +212,20 @@
               </div>
             </div>
           </div>
-          <div class="w-[85%] rounded overflow-hidden shadow-lg">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-zinc-900 rounded-xl">
             <img
-              class="w-60 m-auto my-10"
+              class="w-60 m-auto my-10 bg-white rounded-2xl"
               src="images/Daco_1703273 1.png"
               alt="Sunset in the mountains"
             />
             <div class="px-6 py-4">
-              <div class="font-bold text-xl mb-2">Yellow Coat Jacket</div>
-              <p class="text-gray-700 text-base">
+              <div class="font-bold text-xl mb-2 text-orange-500">Sneakers Skate Shoe</div>
+              <p class="text-gray-300 text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
                 <span class="flex justify-between">
-                  <h1 class="font-medium text-2xl my-2">$234</h1>
+                  <h1 class="font-medium text-2xl my-2 text-green-600">$234</h1>
                   <button
                     class="flex font-bold pr-4 pl-2 py-2 bg-green-500 text-white rounded-md"
                   >
@@ -236,20 +236,20 @@
               </div>
             </div>
           </div>
-          <div class="w-[85%] rounded overflow-hidden shadow-lg">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-zinc-900 rounded-xl">
             <img
-              class="w-60 m-auto my-10"
+              class="w-60 m-auto my-10 bg-white rounded-2xl w-[75%]"
               src="images/pngegg 1.png"
               alt="Sunset in the mountains"
             />
             <div class="px-6 py-4">
-              <div class="font-bold text-xl mb-2">Yellow Coat Jacket</div>
-              <p class="text-gray-700 text-base">
+              <div class="font-bold text-xl mb-2 text-orange-500">Sneakers Basketball Shoe</div>
+              <p class="text-gray-300 text-base">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
                 <span class="flex justify-between">
-                  <h1 class="font-medium text-2xl my-2">$234</h1>
+                  <h1 class="font-medium text-2xl my-2 text-green-600">$234</h1>
                   <button
                     class="flex font-bold pr-4 pl-2 py-2 bg-green-500 text-white rounded-md"
                   >
@@ -274,13 +274,13 @@
               alt="Sunset in the mountains"
             />
             <div class="px-6 py-4">
-              <div class="font-bold text-xl mb-2">Yellow Coat Jacket</div>
-              <p class="text-gray-700 text-base">
+              <div class="font-bold text-xl mb-2 text-orange-500">Prestige High-Cut Leather</div>
+              <p class="text-gray-300 text-base">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
                 <span class="flex justify-between">
-                  <h1 class="font-medium text-2xl my-2">$234</h1>
+                  <h1 class="font-medium text-2xl my-2 text-green-500">$234</h1>
                   <button
                     class="flex font-bold pr-4 pl-2 py-2 bg-green-500 text-white rounded-md"
                   >
@@ -298,13 +298,13 @@
               alt="Sunset in the mountains"
             />
             <div class="px-6 py-4">
-              <div class="font-bold text-xl mb-2">Yellow Coat Jacket</div>
-              <p class="text-gray-700 text-base">
+              <div class="font-bold text-xl mb-2 text-orange-500">Slip-On Formal Shoe</div>
+              <p class="text-gray-300 text-base">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
                 <span class="flex justify-between">
-                  <h1 class="font-medium text-2xl my-2">$234</h1>
+                  <h1 class="font-medium text-2xl my-2 text-green-500">$234</h1>
                   <button
                     class="flex font-bold pr-4 pl-2 py-2 bg-green-500 text-white rounded-md"
                   >
@@ -322,13 +322,13 @@
               alt="Sunset in the mountains"
             />
             <div class="px-6 py-4">
-              <div class="font-bold text-xl mb-2">Yellow Coat Jacket</div>
-              <p class="text-gray-700 text-base">
+              <div class="font-bold text-xl mb-2 text-orange-500">Slip-On Formal Shoe</div>
+              <p class="text-gray-300 text-base">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
                 <span class="flex justify-between">
-                  <h1 class="font-medium text-2xl my-2">$234</h1>
+                  <h1 class="font-medium text-2xl my-2 text-green-500">$234</h1>
                   <button
                     class="flex font-bold pr-4 pl-2 py-2 bg-green-500 text-white rounded-md"
                   >
@@ -361,7 +361,7 @@
           <div class="shadow-lg rounded-md flex items-center w-[100%] my-10">
             <div><img src="icons/image 13.png" alt="" class="w-20" /></div>
             <div class="ml-4">
-              <h1 class="font-bold">Find the Perfect Fit</h1>
+              <h1 class="font-bold">Free Exchanges</h1>
               <p>
                 Everybody is different, which is why we offer styles for every
                 body.
@@ -371,7 +371,7 @@
           <div class="shadow-lg rounded-md flex items-center w-[100%] my-10">
             <div><img src="icons/image 14.png" alt="" class="w-20" /></div>
             <div class="ml-4">
-              <h1 class="font-bold">Find the Perfect Fit</h1>
+              <h1 class="font-bold">Contact Our</h1>
               <p>
                 Everybody is different, which is why we offer styles for every
                 body.
