--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       <div
         class="flex justify-between flex-col-reverse sm:mx-16 sm:my-10 sm:flex sm:justify-between sm:flex-row"
       >
-        <div class="sm:w-[45%] mx-2">
+        <div class="sm:w-[45%] mx-2 text-white">
           <div class="shadow-lg rounded-md flex items-center w-[100%] my-10">
             <div><img src="icons/image 12.png" alt="" class="w-20" /></div>
             <div class="ml-4">
