--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
               src="images/image 5.png"
               alt="Sunset in the mountains"
             />
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 bg-gray-600">
               <div class="font-bold text-xl mb-2 text-orange-500">Nike Shoe</div>
-              <p class="text-gray-300 text-base font-semibold">
+              <p class="text-white text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
@@ -218,9 +218,9 @@
               src="images/Daco_1703273 1.png"
               alt="Sunset in the mountains"
             />
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 bg-gray-600">
               <div class="font-bold text-xl mb-2 text-orange-500">Sneakers Skate Shoe</div>
-              <p class="text-gray-300 text-base font-semibold">
+              <p class="text-white text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
@@ -242,9 +242,9 @@
               src="images/pngegg 1.png"
               alt="Sunset in the mountains"
             />
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 bg-gray-600">
               <div class="font-bold text-xl mb-2 text-orange-500">Sneakers Basketball Shoe</div>
-              <p class="text-gray-300 text-base">
+              <p class="text-white text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
@@ -273,9 +273,9 @@
               src="images/Rectangle 38.png"
               alt="Sunset in the mountains"
             />
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 bg-gray-600">
               <div class="font-bold text-xl mb-2 text-orange-500">Prestige High-Cut Leather</div>
-              <p class="text-gray-300 text-base">
+              <p class="text-white text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
@@ -297,9 +297,9 @@
               src="images/Rectangle 39.png"
               alt="Sunset in the mountains"
             />
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 bg-gray-600">
               <div class="font-bold text-xl mb-2 text-orange-500">Slip-On Formal Shoe</div>
-              <p class="text-gray-300 text-base">
+              <p class="text-white text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
@@ -321,9 +321,9 @@
               src="images/Mask Group.png"
               alt="Sunset in the mountains"
             />
-            <div class="px-6 py-4">
+            <div class="px-6 py-4 bg-gray-600">
               <div class="font-bold text-xl mb-2 text-orange-500">Slip-On Formal Shoe</div>
-              <p class="text-gray-300 text-base">
+              <p class="text-white text-base font-semibold">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </p>
               <div class="my-3">
