--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <h1 class="font-bold text-4xl">CASUAL SHOES</h1>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-3 sm:space-x-3 ml-8">
-          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-zinc-900 rounded-2xl">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10 bg-white rounded-2xl"
               src="images/image 5.png"
@@ -212,7 +212,7 @@
               </div>
             </div>
           </div>
-          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-zinc-900 rounded-xl">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10 bg-white rounded-2xl"
               src="images/Daco_1703273 1.png"
@@ -236,7 +236,7 @@
               </div>
             </div>
           </div>
-          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-zinc-900 rounded-xl">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10 bg-white rounded-2xl w-[75%]"
               src="images/pngegg 1.png"
@@ -267,7 +267,7 @@
           <h1 class="font-bold text-4xl">FORMAL SHOES</h1>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-3 sm:space-x-3 ml-8">
-          <div class="w-[85%] rounded overflow-hidden shadow-lg">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10"
               src="images/Rectangle 38.png"
@@ -291,7 +291,7 @@
               </div>
             </div>
           </div>
-          <div class="w-[85%] rounded overflow-hidden shadow-lg">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10"
               src="images/Rectangle 39.png"
@@ -315,7 +315,7 @@
               </div>
             </div>
           </div>
-          <div class="w-[85%] rounded overflow-hidden shadow-lg">
+          <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10"
               src="images/Mask Group.png"
