--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="mx-8 my-20 text-white">
           <h1 class="font-bold text-4xl">CASUAL SHOES</h1>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-3 sm:space-x-3 ml-8">
+        <div class="grid grid-cols-1 sm:grid-cols-3 sm:space-x-3 ml-8 space-y-4 sm:space-y-0">
           <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10 bg-white rounded-2xl"
@@ -266,7 +266,7 @@
         <div class="mx-7 my-20 text-white">
           <h1 class="font-bold text-4xl">FORMAL SHOES</h1>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-3 sm:space-x-3 ml-8">
+        <div class="grid grid-cols-1 sm:grid-cols-3 sm:space-x-3 ml-8 space-y-4 sm:space-y-0">
           <div class="w-[85%] rounded overflow-hidden shadow-lg bg-gray-600 rounded-2xl">
             <img
               class="w-60 m-auto my-10"
@@ -348,7 +348,7 @@
         class="flex justify-between flex-col-reverse sm:mx-16 sm:my-10 sm:flex sm:justify-between sm:flex-row"
       >
         <div class="sm:w-[45%] mx-2 text-white">
-          <div class="shadow-lg rounded-md flex items-center w-[100%] my-10">
+          <div class="shadow-lg rounded-md flex items-center w-[100%] my-10 bg-gray-600 p-1">
             <div><img src="icons/image 12.png" alt="" class="w-20" /></div>
             <div class="ml-4">
               <h1 class="font-bold">Find the Perfect Fit</h1>
@@ -358,7 +358,7 @@
               </p>
             </div>
           </div>
-          <div class="shadow-lg rounded-md flex items-center w-[100%] my-10">
+          <div class="shadow-lg rounded-md flex items-center w-[100%] my-10 bg-gray-600 p-1">
             <div><img src="icons/image 13.png" alt="" class="w-20" /></div>
             <div class="ml-4">
               <h1 class="font-bold">Free Exchanges</h1>
@@ -368,7 +368,7 @@
               </p>
             </div>
           </div>
-          <div class="shadow-lg rounded-md flex items-center w-[100%] my-10">
+          <div class="shadow-lg rounded-md flex items-center w-[100%] my-10 bg-gray-600 p-1">
             <div><img src="icons/image 14.png" alt="" class="w-20" /></div>
             <div class="ml-4">
               <h1 class="font-bold">Contact Our</h1>
